apps/webapp/src/components/toolbar.module.css
.container {
  display: flex;
  flex-direction: row;
  gap: 4px;
  justify-content: center;
  margin-top: 2px;
}

.item {
  height: 26px;
  cursor: pointer;
  color: #1f313c;
  font-size: 0.8rem;
  border-radius: 4px;
  align-items: center;
  border: 1px solid #e4d6bc;
  border: 1px solid #7b520033;
  display: flex;
  flex-direction: row;
  gap: 2px;
  background-color: #7b520022;
  padding: 0;
  padding-right: 4px;
}

.item:hover {
  background-color: #ffffff22;
}

.item:focus-visible {
  background-color: #e8ce7d;
}

.iconContainer {
  background-color: #7b520033;
  width: 20px;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 4px;
}

